--- a/b/bu/bur/burstmedia.com.html
+++ b/b/bu/bur/burstmedia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the burstmedia.com privacy policy that was archived on 2007-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070612083136id_/http%3A//www.burstmedia.com/isl/index.asp%3Fpage%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the burstmedia.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228050724id_/http%3A//www.burstmedia.com/isl/index.asp%3Fpage%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -17,6 +17,114 @@ function popitup(url, name, dimensionString)
 	if (window.focus) {newwindow.focus()}
 	return false;
 }
+</script><style type="text/css">
+
+#hintbox{ /*CSS for pop up hint box */
+	position:absolute;
+	top: 0;
+	background-color: #ffffcc;
+	width: 150px; /*Default width of hint.*/ 
+	padding: 3px;
+	border:1px solid black;
+	font:normal 12px Arial;
+	line-height:16px;
+	z-index:100;
+	border-right: 2px solid black;
+	border-bottom: 2px solid black;
+	visibility: hidden;
+}
+
+.hintanchor{ /*CSS for link that shows hint onmouseover*/
+	font-weight: bold;
+	color: navy;
+	margin: 2px 5px;
+}
+
+</style>
+
+<script type="text/javascript">
+
+/***********************************************
+* Show Hint script- © Dynamic Drive (www.dynamicdrive.com)
+* This notice MUST stay intact for legal use
+* Visit http://www.dynamicdrive.com/ for this script and 100s more.
+***********************************************/
+		
+var horizontal_offset="9px" //horizontal offset of hint box from anchor link
+
+/////No further editting needed
+
+var vertical_offset="0" //horizontal offset of hint box from anchor link. No need to change.
+var ie=document.all
+var ns6=document.getElementById&&!document.all
+
+function getposOffset(what, offsettype){
+	var totaloffset=(offsettype=="left")? what.offsetLeft : what.offsetTop;
+	var parentEl=what.offsetParent;
+	while (parentEl!=null){
+		totaloffset=(offsettype=="left")? totaloffset+parentEl.offsetLeft : totaloffset+parentEl.offsetTop;
+		parentEl=parentEl.offsetParent;
+	}
+	return totaloffset;
+}
+
+function iecompattest(){
+	return (document.compatMode && document.compatMode!="BackCompat")? document.documentElement : document.body
+}
+
+function clearbrowseredge(obj, whichedge){
+	var edgeoffset=(whichedge=="rightedge")? parseInt(horizontal_offset)*-1 : parseInt(vertical_offset)*-1
+	if (whichedge=="rightedge"){
+		var windowedge=ie && !window.opera? iecompattest().scrollLeft+iecompattest().clientWidth-30 : window.pageXOffset+window.innerWidth-40
+		dropmenuobj.contentmeasure=dropmenuobj.offsetWidth
+		if (windowedge-dropmenuobj.x < dropmenuobj.contentmeasure)
+			edgeoffset=dropmenuobj.contentmeasure+obj.offsetWidth+parseInt(horizontal_offset)
+	}
+	else{
+		var windowedge=ie && !window.opera? iecompattest().scrollTop+iecompattest().clientHeight-15 : window.pageYOffset+window.innerHeight-18
+		dropmenuobj.contentmeasure=dropmenuobj.offsetHeight
+		if (windowedge-dropmenuobj.y < dropmenuobj.contentmeasure)
+			edgeoffset=dropmenuobj.contentmeasure-obj.offsetHeight
+	}
+	return edgeoffset
+}
+
+function showhint(menucontents, obj, e, tipwidth){
+	if ((ie||ns6) && document.getElementById("hintbox")){
+		dropmenuobj=document.getElementById("hintbox")
+		dropmenuobj.innerHTML=menucontents
+		dropmenuobj.style.left=dropmenuobj.style.top=-500
+		if (tipwidth!=""){
+			dropmenuobj.widthobj=dropmenuobj.style
+			dropmenuobj.widthobj.width=tipwidth
+		}
+		dropmenuobj.x=getposOffset(obj, "left")
+		dropmenuobj.y=getposOffset(obj, "top")
+		dropmenuobj.style.left=dropmenuobj.x-clearbrowseredge(obj, "rightedge")+obj.offsetWidth+"px"
+		dropmenuobj.style.top=dropmenuobj.y-clearbrowseredge(obj, "bottomedge")+"px"
+		dropmenuobj.style.visibility="visible"
+		obj.onmouseout=hidetip
+	}
+}
+
+function hidetip(e){
+	dropmenuobj.style.visibility="hidden"
+	dropmenuobj.style.left="-500px"
+}
+
+function createhintbox(){
+	var divblock=document.createElement("div")
+	divblock.setAttribute("id", "hintbox")
+	document.body.appendChild(divblock)
+}
+
+if (window.addEventListener)
+	window.addEventListener("load", createhintbox, false)
+else if (window.attachEvent)
+	window.attachEvent("onload", createhintbox)
+else if (document.getElementById)
+	window.onload=createhintbox
+
 </script>
 </head>
 <body>
@@ -57,7 +165,7 @@ function popitup(url, name, dimensionString)
         <div id="main">
             <div id="right_column">
   <div style="text-align:middle">
-   <a href="http://truste.org/ivalidate.php?url=www.burstmedia.com&amp;sealid=102"><img src="/fe_images/truste.gif"></a>
+   <a href="http://truste.org/ivalidate.php?companyName=burst%20Media%20Corporation&amp;sealid=102"><img src="/fe_images/truste.gif"></a>
 
 </div>
            
@@ -94,8 +202,8 @@ function popitup(url, name, dimensionString)
             </div>
             <div id="content">     
                 <h1>Burst Media Privacy Statement</h1>
-<p>Effective date: 5/20/2005</p>
-<p>Fundamentally, the privacy of Web users must be protected, and the most effective way to preserve that privacy is to confine that data at the site level. Burst Media as well as Burst AdConductor collects no personally identifiable data, and therefore protects user privacy while eliminating an unnecessary costly feature. Burst’s TRUSTe license verifies this privacy stance. </p>
+<p>Effective date: 12/14/2007</p>
+<p>Fundamentally, the privacy of Web users must be protected, and the most effective way to preserve that privacy is to confine that data at the site level. Burst Media as well as Burst AdConductor collects no personally identifiable data, and therefore protects user privacy while eliminating an unnecessary costly feature. Burst’s TRUSTe license verifies this privacy stance.  </p>
 <h3>TRUSTe </h3>
 <h4>Burst Network Publishers:</h4>
 <p>This confirms that Burst Media is a licensee of the TRUSTe Privacy Program. We also participate in the EU Safe Harbor Privacy Framework as set forth by the United States Department of Commerce. The privacy statement discloses the privacy practices for www.burstmedia.com and www.burstnet.com. If you have questions or concerns regarding this statement, you should first contact Operations at <a href="mailto:privacy@burstmedia.com">privacy@burstmedia.com</a>. If you do not receive acknowledgment of your inquiry or your inquiry has not been satisfactorily addressed, you should then contact TRUSTe <a href="http://www.truste.org/consumers/watchdog_complaint.php" target="_blank">http://www.truste.org/consumers/watchdog_complaint.php</a> . TRUSTe will then serve as a liaison with the Web site to resolve your concerns. </p>
@@ -125,14 +233,17 @@ function popitup(url, name, dimensionString)
 <p>In these instances, Burst has no control over the information collected by the third-party, and may not be held responsible for the actions of the third-party measurement service where collected information is concerned. </p>
 <p>If you are a Burst Network Publisher and have questions regarding different third-party measurement services and their respective methods of information collection, please contact <a href="mailto:privacy@burstmedia.com">privacy@burstmedia.com</a>.</p>
 <p>If you are an AdConductor Publisher and have questions regarding different third-party measurement services and their respective methods of information collection, please contact <a href="mailto:privacy@AdConductor.com">privacy@AdConductor.com</a>.</p>
-<p>If you want to prevent a third-party advertiser from setting and/or reading cookies on your computer, you may either visit each ad server's Web site individually and opt out or you may visit the Network Advertising Initiative’s (“NAI”) site to opt-out of many of the third-party advertising companies’ cookies. <a href="http://www.networkadvertising.org/consumer/opt_out.asp" target="_blank">Click here</a> for the NAI gateway opt-out site. </p>
+<p>We use third-party advertising companies to serve ads when you visit our Web site.  These companies may use aggregated information (not including your name, address, email address or telephone number) about your visits to this and other Web sites in order to provide advertisements about goods and services of interest to you.  If you would like more information about this practice and to know your choices about not having this information used by these companies, click <a href="http://networkadvertising.org/consumer/opt_out.asp" target="_blank">here</a>.</p>
+<p>We do not share, sell, rent or trade PII with third-parties for promotional purposes.</p>
 <h3>Personal Information </h3>
 <h4>Burst Network Publishers:</h4>
 <p>Burst regards all personal information collected from its Web publisher members as completely confidential. This includes personal data provided during registration processes and financial account information. Burst does offer to advertisers any data which may facilitate the sale of advertising for a member site. This includes traffic data, click-thru rates, unique visitor information, Web site geographic location, content information, and any demographic information offered by the Web site member for the purpose of facilitating an advertising sale. </p>
 <h4>AdConductor Publishers:</h4>
 <p>Burst regards all personal information collected from its AdConductor customers as completely confidential. This includes personal data provided during registration processes and financial account information. 
-</p><h4>Security</h4>
-<p>The security of your personal information is important to us. When you enter sensitive information (such as credit card number and/or social security number) on our registration or order forms, we encrypt that information using secure socket layer technology (SSL). To learn more about SSL, follow this <a href="http://www.webopedia.com/TERM/S/SSL.html" target="_blank">link</a>.&nbsp;&nbsp; </p>
+</p><h4>AdConductor Publishers:</h4>
+<p>We collect information such as name, email and phone number on our site in the “Contact Us” section. This information is used to establish contact with perspective publishers and is only used for that purpose.</p>
+<h4>Security</h4>
+<p>The security of your personal information is important to us. When you enter sensitive information (such as Tax ID number and/or social security number) on our registration or order forms, we encrypt that information using secure socket layer technology (SSL). To learn more about SSL, follow this <a href="http://www.webopedia.com/TERM/S/SSL.html" target="_blank">link</a>.&nbsp;&nbsp; </p>
 <p>We follow generally accepted industry standards to protect the personal information submitted to us, both during transmission and once we receive it. No method of transmission over the Internet, or method of electronic storage, is 100% secure, however. Therefore, while we strive to use commercially acceptable means to protect your personal information, we cannot guarantee its absolute security.</p>
 <p>If you have any questions about security on our Web site, you can email us at <a href="mailto:security@burstmedia.com">security@burstmedia.com</a>.</p>
 <h3>Bulletin Boards/Chat Rooms</h3>
@@ -142,11 +253,49 @@ function popitup(url, name, dimensionString)
 <p>If you are an AdConductor publisher and have any questions pertaining to this privacy policy and its contents, please direct your correspondence to <a href="mailto:privacy@AdConductor.com">privacy@AdConductor.com</a>. </p>
 <h3>Correcting/Updating/Deleting/Deactivating Personal Information </h3>
 <p>If a user’s personally identifiable information changes (such as zip code, phone, email or postal address), or if a user no longer desires our service, we provide a way to correct, update or delete/deactivate users’ personally identifiable information. This can be done by logging into your user account and updating your personal information or discontinuing service at anytime. </p>
-<p>Burst Network Publishers can direct their request to <a href="mailto:privacy@burstmedia.com">privacy@burstmedia.com</a> and we will change the information requested. </p>
-<p>AdConductor publishers can direct their request to <a href="mailto:privacy@AdConductor.com">privacy@AdConductor.com</a> and we will change the information requested. </p>
+<p>Burst Network Publishers can direct their request to <a href="mailto:privacy@burstmedia.com">privacy@burstmedia.com</a> and we will change the information requested within 30 days.  </p>
+<p>AdConductor publishers can direct their request to <a href="mailto:privacy@AdConductor.com">privacy@AdConductor.com</a> and we will change the information requested within 30 days.  </p>
 <p>Though we make every effort to preserve user privacy, we may need to disclose personal information when required by law wherein we have a good-faith belief that such action is necessary to comply with an appropriate law enforcement investigation, current judicial proceeding, a court order or legal process served on our Ad servers or Web site.</p>
 <h3>Notification of Changes </h3>
-<p>If we decide to change our privacy policy, we will post these changes on this page so that you are always aware of what information we collect, how we use it, and under what circumstances we disclose it. Regardless of later updates, we will never use the information you submit under this current policy in a new way without first providing you an opportunity to opt-out or otherwise prevent that use. </p>
+<p>If we decide to change our privacy policy, we will post these changes on this page so that you are always aware of what information we collect, how we use it, and under what circumstances we disclose it. Regardless of later updates, we will never use the information you submit under this current policy in a new way without first providing you an opportunity to opt-out or otherwise prevent that use. If we make material changes to this policy, we will notify you here, by email, or by means of a notice on our home page.</p>
+<h3>Customer Testimonials</h3>
+<p>We post customer testimonials on our web site which may contain personally identifiable information such as the customer's name.  We do obtain the customer's consent prior to posting the testimonial to post their name along with their testimonial.</p>
+
+<h3>Emails</h3>
+<h4>Service-related Announcements</h4>
+<p>We will send you strictly service-related announcements on occasions when it is 
+necessary to do so.&nbsp; For instance, if our service is temporarily suspended for 
+maintenance, or a new account enhancement is released which will effect the way 
+you work with us, we might send you an email.
+</p>
+<p>Generally, you may not opt-out of these communications, which are not promotional in nature.&nbsp; If you do not wish 
+to receive them, you have the option to deactivate your account. You can 
+deactivate your account by contacting Publisher Services and requesting that 
+your account be closed.&nbsp; You can reach publisher services by email: <a title="mailto:support@burstmedia.com" href="mailto:support@burstmedia.com">support@burstmedia.com</a> or by phone: 
+800-876-4352 or 781-852-5293.
+</p>
+<h4>Customer Service</h4>
+<p>Based upon the personally identifiable information you provide us, we will send you a welcoming email with 
+your username and password.&nbsp; We will also communicate with you in response to 
+your inquiries, to provide the services you request, and to manage your account. 
+We will communicate with you by email or telephone, in accordance with your 
+wishes.
+ </p>
+<h4>Choice/Opt-out</h4>
+<p>Burst does not share your personally identifiable information with third parties.&nbsp; 
+Your information is only used to provide service and support while you work with 
+Burst Media.
+</p>We do send out regular updates of recently added campaigns to publishers in our 
+network.&nbsp; If you no longer wish to receive those email updates, you may opt-out 
+of receiving them by following the instructions included in each update or 
+communication by emailing us at <a title="mailto:support@burstmedia.com" href="mailto:support@burstmedia.com">support@burstmedia.com</a> or calling us 
+at: 800-876-4352 or 781-852-5293.
+<p>
+</p>
+<p>Burst does not currently share personally identifiable information with third parties.  
+Should that policy change, you will be notified when your personal information is collected by any third party that is not our agent/service provider, so you can make an informed choice as to whether or not to share your information with that party. 
+</p>
+
 <h3>Burst Media<br>
 8 New England Executive Park<br>
 Burlington, MA 01803</h3>
@@ -155,7 +304,8 @@ Burlington, MA 01803</h3>
             <div id="footer">
 <div id="bottom_text_nav">
 <a href="/publisher/index.asp">APPLY</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="/about/index.asp?page=contact">CONTACT</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="/about/contact.asp">CONTACT</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="/about/index.asp?page=careers">CAREERS</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="/site_map.asp">SITE MAP</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="/isl/index.asp?page=privacy">PRIVACY</a>&nbsp;&nbsp;&nbsp;&nbsp;©&nbsp;2007 BurstMedia&nbsp; All Rights Reserved</div>
 </div>
@@ -164,4 +314,4 @@ Burlington, MA 01803</h3>
     </div> <!-- full_page -->
 
 
-</body></html>
+<div id="hintbox"></div></body></html>
