--- a/s/sc/sca/scanscout.com.html
+++ b/s/sc/sca/scanscout.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the scanscout.com privacy policy that was archived on 2007-05-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070509184043id_/http%3A//www.scanscout.com/privacy-policy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scanscout.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228053256id_/http%3A//www.scanscout.com/privacy-policy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html lang="en"><head>
 <title>ScanScout - Privacy Policy</title>
@@ -8,6 +8,7 @@
 		@import url(css/core.css);
 	</style>
 	<link rel="stylesheet" type="text/css" href="css/print.css" media="print">
+	<link rel="Shortcut Icon" type="image/x-icon" href="images/favicon.ico">
 	<script src="script/core.js" type="text/javascript"></script>
 	<script src="script/dropShadows.js" type="text/javascript"></script>
 </head>
@@ -24,15 +25,17 @@
 
 		<div id="content">
 
-			<div id="topNav" class="clearfix">				
+			<div id="topNav" class="clearfix">
 	<ul class="clearfix">
-		<li><a href="index.shtml" class="topNavLink highContrast" id="topNav1"><span class="shadow">Home</span><span>Home</span></a></li>
-		<li><a href="publishers.shtml" class="topNavLink highContrast" id="topNav2"><span class="shadow">For Publishers</span><span>For Publishers</span></a></li>
-		<li><a href="advertisers.shtml" class="topNavLink highContrast" id="topNav3"><span class="shadow">For Advertisers</span><span>For Advertisers</span></a></li>
-		<li><a href="about.shtml" class="topNavLink highContrast" id="topNav4"><span class="shadow">About Us</span><span>About Us</span></a></li>
-		<!--li><a href="news.shtml" class="topNavLink highContrast" id="topNav5">News</a></li-->
-		<li><a href="contact.shtml" class="topNavLink highContrast" id="topNav6"><span class="shadow">Contact Us</span><span>Contact Us</span></a></li>
-	</ul>					
+		<li><a href="http://www.scanscout.com/index.shtml" class="topNavLink highContrast" id="topNav1"><span class="shadow">Home</span><span>Home</span></a></li>
+		<li><a href="http://www.scanscout.com/publishers.shtml" class="topNavLink highContrast" id="topNav2"><span class="shadow">For Publishers</span><span>For Publishers</span></a></li>
+		<li><a href="http://www.scanscout.com/advertisers.shtml" class="topNavLink highContrast" id="topNav3"><span class="shadow">For Advertisers</span><span>For Advertisers</span></a></li>
+		<!--<li><a href="http://demo.scanscout.com" class="topNavLink highContrast" id="topNav5">Demos</a></li> -->
+		<li><a href="http://demo.scanscout.com/gallery.shtml" class="topNavLink highContrast" id="topNavGallery"><span class="shadow">Gallery</span><span>Gallery</span></a></li>
+		<li><a href="http://www.scanscout.com/about.shtml" class="topNavLink highContrast" id="topNav4"><span class="shadow">About Us</span><span>About Us</span></a></li>
+		<!--<li><a href="news.shtml" class="topNavLink highContrast" id="topNav-N">News</a></li>-->
+		<li><a href="http://www.scanscout.com/contact.shtml" class="topNavLink highContrast" id="topNav6"><span class="shadow">Contact Us</span><span>Contact Us</span></a></li>
+	</ul>
 </div><!-- /topNav -->
 
 			<div id="contentInner" class="clearfix">
@@ -342,8 +345,8 @@ provided to us in these circumstances.&nbsp; Depending on where you
 live, you may have a legal right to receive notice of a security
 breach in writing.&nbsp; To receive a free written notice of a
 security breach (or to withdraw your consent from receiving
-electronic notice) you should notify us at ScanScout, Inc., Attn:
-Waikit Lau or Steve Lee, The Beebe Building, 129 South Street, Boston, MA
+electronic notice) you should notify us at ScanScout, Inc., Attn: Privacy Matters,
+The Beebe Building, 129 South Street, Boston, MA
 02111, USA.<br>
 
 <br>
@@ -405,8 +408,8 @@ that a business has disclosed to third parties, during the
 immediately preceding calendar year, for the third parties' direct
 marketing purposes, and (ii) the names and addresses of all such
 third parties. To request the above information, please e-mail us at:
-privacy@ScanScout.com, or write to us at ScanScout, Inc., Attn:
-Waikit Lau or Steve Lee, The Beebe Building, 129 South Street, Boston, MA
+privacy@ScanScout.com, or write to us at ScanScout, Inc.,
+Attn: Privacy Matters, The Beebe Building, 129 South Street, Boston, MA
 02111, USA, with a reference to California Disclosure
 Information.<br>
 
@@ -444,6 +447,7 @@ or write to us at:<br>
 <br>
 
 ScanScout, Inc.<br>
+Attn: Privacy Matters<br>
 The Beebe Building<br>
 129 South Street<br>
 Boston, MA  &nbsp;02111<br>
@@ -455,13 +459,23 @@ Boston, MA  &nbsp;02111<br>
 		</div><!-- /content -->
 
 		<div id="footer" class="clearfix">
-	<p>Copyright 2007 ScanScout</p>			
+	<p>Copyright 2007 ScanScout</p>
 	<ul class="clearfix">
 		<li><a href="terms.shtml" class="footerLink">Terms of Use</a></li>
 		<li><a href="privacy-policy.shtml" class="footerLink">Privacy Policy</a></li>
 		<!--li><a href="javascript://" class="footerLink">Login</a></li-->
 	</ul>
 </div><!-- /footer -->
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2167906-1";
+urchinTracker();
+</script>
+
+
+
 
 	</div><!-- /pageInner -->
 </div><!-- /page -->
