--- a/f/fd/fdm/fdmgroup.com.html
+++ b/f/fd/fdm/fdmgroup.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fdmgroup.com privacy policy that was archived on 2007-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070529205234id_/http%3A//www.fdmgroup.com/termsandconditions/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fdmgroup.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228081332id_/http%3A//www.fdmgroup.com/termsandconditions/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>privacy FDM Group</title>
@@ -65,9 +65,9 @@
 <ul>
   <li class="sub2">
   <ul>
+    <li class="sub2"><a href="/termsandconditions/webmaster.html" title="Webmaster">Webmaster</a></li>
     <li class="sub2"><a href="/termsandconditions/legal.html" title="Legal">Legal</a></li>
-    <li class="sub2"><a class="select" href="#" title="Privacy">Privacy</a></li>
-    <li class="sub2"><a href="/termsandconditions/webmaster.html" title="Webmaster">Webmaster</a>
+    <li class="sub2"><a class="select" href="#" title="Privacy">Privacy</a>
     </li>
   </ul>
   </li>
