--- a/i/im/ime/imesh.com.html
+++ b/i/im/ime/imesh.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the imesh.com privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623145425id_/http%3A//www.imesh.com/privacypolicy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the imesh.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228090803id_/http%3A//www.imesh.com/privacypolicy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>iMesh - Over 15,000,000 Music downloads and MP3's - 100% legal</title>
@@ -14,22 +14,20 @@
 <script type="text/javascript">_uacct = "UA-151840-1"; urchinTracker();</script>
 <center>
 	<div id="top">
-		
-		<div align="right">
-		<img src="images/music/download_spacer.gif" width="1" height="20"><br>
-		<span style="color: #666666;">Website language:</span>
-		<select id="ddlTopLanguage" style="border: 1px solid #404040; " class="lng_dropdown" onchange="JavaScript: redirectPage(this.value);">
-			<option value="/" selected="">English</option>
-			<option value="/fr/">Français</option>
-			<option value="/de/">Deutsch</option>
-			<option value="/es/">Español</option>
-			<option value="/it/">Italiano</option>
-			<option value="/pl/">Polski</option>
-			<option value="/nl/">Nederlands</option>
-			<option value="/tr/">Türkçe</option>
-		</select>
+		<div id="logo" align="center">
+			<a href="./"><img src="../images/music/download_spacer.gif" alt="" width="110" height="111" border="0"></a>
+			<span style="color: #666666;">Website language:</span>
+			<select id="ddlTopLanguage" style="border: 1px solid #404040; margin-top: 7px;" class="lng_dropdown" onchange="redirectPage(this.value);">
+				<option value="/" selected="">English</option>
+				<option value="/fr/">Français</option>
+				<option value="/de/">Deutsch</option>
+				<option value="/es/">Español</option>
+				<option value="/it/">Italiano</option>
+				<option value="/pl/">Polski</option>
+				<option value="/nl/">Nederlands</option>
+				<option value="/tr/">Türkçe</option>
+			</select>
 		</div>
-		<div id="logo"><a href="/"><img src="images/music/download_spacer.gif" alt="" width="127" height="141" border="0"></a></div>
 		<div id="header_en"> 
 		<table id="top_menu" cellspacing="0" cellpadding="0" border="0">
 			<tbody><tr>
