--- a/v/va/vam/vampirefreaks.com.html
+++ b/v/va/vam/vampirefreaks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vampirefreaks.com privacy policy that was archived on 2007-03-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070316181731id_/http%3A//vampirefreaks.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vampirefreaks.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228121646id_/http%3A//vampirefreaks.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>
@@ -49,28 +49,76 @@ var submenuwidth=140 //specify sub menus' width
 
 </script>
 
-<script type="text/javascript" src="http://vampirefreaks.com/milonic_src.js"></script>	
+<script type="text/javascript" src="http://vampirefreaks.com/js/milonic_src.js"></script>	
 
 <script type="text/javascript">
 
-if(ns4)_d.write("<scr"+"ipt type=text/javascript src=http://vampirefreaks.com/mmenuns4.js><\/scr"+"ipt>");		
-  else _d.write("<scr"+"ipt type=text/javascript src=http://vampirefreaks.com/mmenudom.js><\/scr"+"ipt>"); 
+if(ns4)_d.write("<scr"+"ipt type=text/javascript src=http://vampirefreaks.com/js/mmenuns4.js><\/scr"+"ipt>");		
+  else _d.write("<scr"+"ipt type=text/javascript src=http://vampirefreaks.com/js/mmenudom.js><\/scr"+"ipt>"); 
 
 </script>
-<script type="text/javascript" src="http://vampirefreaks.com/menu_data.js"></script>	
+<script type="text/javascript" src="http://vampirefreaks.com/js/menu_data.js"></script>	
 
 
 
-<table width="100%" align="top" class="maintop">
-<tbody><tr valign="top">
+<style type="text/css">
+#friendslinks div{ position: relative; } /* relative position container for menu */
+
+#friendslinks .friendsmenu_on, .friendmenu_on a { 
+position: absolute;
+display: block;
+z-index: 2;
+margin-top: 0px!important;
+//top: 0px; /* IE display fix */
+left: 100px;
+width: 110px;
+border: 1px solid #bbbbbb;
+background: #000000;
+//color: #FFFFFF;
+}
+.friendsmenu_on a:hover{
+display:block;
+background: #333333;
+color: #FFFFFF;
+}
+.friendsmenu { display: none; }
+#friendslinks a { position: relative; }
+</style>
+
+
+
+<script language="javascript" type="text/javascript">
+function popupmenu(parent, menuid) {
+ menu_element = document.getElementById(menuid);
+ menu_element.className = 'friendsmenu_on';
+
+}
+function hidemenu(menuid) {
+ menu_element = document.getElementById( menuid );
+ menu_element.className = 'friendsmenu';
+}
+</script>
+
+
+
+
+
+<script src="http://chat.vampirefreaks.com/webmessenger/userplane/functions.js" type="text/javascript" language="javascript"></script>
+
+
+
+
+
+<table width="100%" class="maintop" cellpadding="2" cellspacing="0">
+<tbody><tr>
 
 
 
 <td width="150">
-<table style="table-layout: fixed" border="2" cellspacing="0" cellpadding="0" width="150" class="leftnav">
+<table style="table-layout: fixed" cellspacing="0" cellpadding="0" width="150" class="leftnav">
 <tbody><tr align="center"><td><center>
-<font size="-1">882740 Members<br></font>
-<a href="http://vampirefreaks.com/gothic_users.php">4001  Users Online</a>
+<font size="-1">1322723 Members<br></font>
+<a href="http://vampirefreaks.com/gothic_users.php">2559  Users Online</a>
 </center></td>
 </tr>
 </tbody></table>
@@ -79,7 +127,6 @@ if(ns4)_d.write("<scr"+"ipt type=text/javascript src=http://vampirefreaks.com/mm
 <td width="100%" align="center">
 <a href="http://vampirefreaks.com/main.php">
 <img src="http://e.vampirefreaks.com/images/vf_title.gif" align="center" border="0"></a>
-<br>
 </td>
 
 
@@ -89,14 +136,14 @@ if(ns4)_d.write("<scr"+"ipt type=text/javascript src=http://vampirefreaks.com/mm
 
 
 
-<table border="0" width="100%" class="main">
+<table border="0" width="100%" class="main" cellpadding="2" cellspacing="0">
 <tbody><tr>
 
-<td width="120" align="left" valign="top">
+<td width="120" align="left" valign="top" class="side_td">
 
 
 
-<table style="table-layout: fixed" border="2" cellspacing="0" cellpadding="0" width="150" class="leftnav">
+<table style="table-layout: fixed" cellspacing="0" cellpadding="0" width="150" class="leftnav">
 <tbody><tr>
 <td><center><a href="http://vampirefreaks.com/login.php">Site Login</a>
 </center>
@@ -105,20 +152,21 @@ if(ns4)_d.write("<scr"+"ipt type=text/javascript src=http://vampirefreaks.com/mm
 <tr align="center">
 <td>
 <a href="http://vampirefreaks.com/signup.php">
-<b>New Users Sign Up</b></a> <br>
+<b>New Users Sign Up</b></a>
 </td> 
 </tr>  
 </tbody></table> 
+<br class="small_space">
 
-<table style="table-layout: fixed" border="2" cellspacing="0" cellpadding="0" width="150" class="leftnav">
+<table style="table-layout: fixed" cellspacing="0" cellpadding="0" width="150" class="leftnav">
 <tbody><tr align="center">
 <td>
-<a href="http://vampirefreaks.com/forum/">Messageboard</a><br>
-<a href="http://vampirefreaks.com/flashchat/">Chatroom</a><br>
-<a href="http://vampirefreaks.com/classifieds">Classifieds</a><br>
-<a href="http://vampirefreaks.com/bands.php">Band Profiles</a><br>
-<a href="http://vampirefreaks.com/musicreviews">Music Reviews</a><br>
-<a href="http://vampirefreaks.com/radio.php">Radio</a> / 
+<a href="http://vampirefreaks.com/forum/">Messageboard</a>
+<a href="http://vampirefreaks.com/flashchat/">Chatroom</a>
+<a href="http://vampirefreaks.com/classifieds">Classifieds</a>
+<a href="http://vampirefreaks.com/bands.php">Band Profiles</a>
+<a href="http://vampirefreaks.com/musicreviews">Music Reviews</a>
+<a href="http://vampirefreaks.com/radio.php">Radio</a>
 <a href="http://vampirefreaks.com/musicplayer/" target="_blank">Player</a>
 
 
@@ -126,18 +174,19 @@ if(ns4)_d.write("<scr"+"ipt type=text/javascript src=http://vampirefreaks.com/mm
 </td>
 </tr>
 </tbody></table>
-<br><table style="table-layout: fixed" border="2" cellspacing="0" cellpadding="0" width="150" class="leftnav">
+<br class="small_space"><table style="table-layout: fixed" cellspacing="0" cellpadding="0" width="150" class="leftnav">
  <tbody><tr>
  <td><center>
  <a href="http://fuckthemainstream.com" target="_blank">Gothic Clothing @ <br>FuckTheMainstream</a>
  </center></td></tr></tbody></table>
+<br class="small_space">
 
 
 <center>
 <table style="table-layout: fixed" cellspacing="0" cellpadding="0" width="150" border="0" class="googleads">
 <tbody><tr align="top">
 
-<td width="150" height="690"><center>
+<td width="150" height="600"><center>
 
 
 <script type="text/javascript"><!--
@@ -173,8 +222,7 @@ google_color_text = ["FFFFFF"];
 </p></center>
 </td>
 
-<td width="100%" valign="top">
-
+<td width="100%" valign="top" class="main_td">
 
 <center>
 <h3>
@@ -199,39 +247,36 @@ that users publish on the site.  This service is provided as-is, and we do not m
 
 
 
+<br><center>
+<script type="text/javascript"><!--
+google_ad_client = "pub-8824917519443211";
+google_alternate_color = "000000";
+google_ad_width = 300;
+google_ad_height = 250;
+google_ad_format = "300x250_as";
+google_ad_type = "text_image";
+//2007-05-19: square_bottom
+google_ad_channel = "5859408437";
+google_color_border = "BB55DD";
+google_color_bg = "000000";
+google_color_link = "FF0000";
+google_color_text = "FFFFFF";
+google_color_url = "BB55DD";
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</center>
+
+
 
 </td>
-<td width="120" align="right" valign="top">
+<td width="120" align="right" valign="top" class="side_td">
 </td>
 </tr>
 </tbody></table>
 
 <center>
-
-
-
-
-<div class="googleads">
-<script type="text/javascript"><!--
-google_ad_client = "pub-8824917519443211";
-google_alternate_ad_url = "http://vampirefreaks.com/ads/fuckthemainstream.html";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_type = "text_image";
-//2006-10-03: bottom
-google_ad_channel ="1087386012";
-google_color_border = ["000000"];
-google_color_bg = ["000000"];
-google_color_link = ["BB55DD"];
-google_color_url = ["BB55DD"];
-google_color_text = ["FFFFFF"];
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</div>
-<br>
-
 
 
 
@@ -254,6 +299,18 @@ div .googleads{display:block!important;}
 [<a href="http://vampirefreaks.com/faq.php"><small>FAQ</small></a>] <br>
 © VampireFreaks.com 2007 &nbsp;  All Rights Reserved
 </small>
+
+
+
+
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-880955-1";
+urchinTracker();
+</script>
+
 
 </center>
 <br>
