--- a/t/ta/taf/tafesa.edu.au.html
+++ b/t/ta/taf/tafesa.edu.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tafesa.edu.au privacy policy that was archived on 2007-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070619081916id_/http%3A//www.sacentral.sa.gov.au/site/page.cfm%3Fu%3D25) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tafesa.edu.au privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228122301id_/http%3A//www.sacentral.sa.gov.au/site/page.cfm%3Fu%3D25) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -153,7 +153,7 @@ obj.value="";
 <li><a href="/site/page.cfm?u=10">Contact Us</a> :</li>
 </ul>
 <br>Currently Viewing: http://www.sacentral.sa.gov.au/site/page.cfm?u=25<br>
-Site last updated:2:59 PM 12 Jun 2007</div>
+Site last updated:3:05 PM 28 Dec 2007</div>
 </div>
 </div>
 <div id="column3">
@@ -166,7 +166,7 @@ Site last updated:2:59 PM 12 Jun 2007</div>
 <li><a href="http://www.southaustralia.biz/move/">Migrating to South Australia</a></li>
 <li><a href="http://www.parliament.sa.gov.au/">Parliament SA</a></li>
 <li><a href="http://www.tenders.sa.gov.au/index.do">SA Tenders &amp; Contracts</a></li>
-<li><a href="http://www.stateplan.sa.gov.au/home.php">South Australia Strategic Plan</a></li>
+<li><a href="http://www.saplan.org.au">South Australia Strategic Plan</a></li>
 <li><a href="http://www.infrastructure.sa.gov.au">Strategic Infrastructure Plan</a></li>
 </ul>
 </div>
@@ -175,7 +175,7 @@ Site last updated:2:59 PM 12 Jun 2007</div>
 </div>
 <div class="satodaylist" title="SA today directory listing">
 <ul>
-<li><a href="http://www.sacentral.sa.gov.au/site/page.cfm?u=93">.:. Add an Event</a></li>
+<li><a href="http://www.sacentral.sa.gov.au/site/page.cfm?u=63">.:. Add an Event</a></li>
 <li><a href="http://www.sacentral.sa.gov.au/site/page.cfm?u=94">.:. Submit a News Item</a></li>
 <li><a href="http://www.environment.sa.gov.au/reporting/atmosphere/airindex_sum.html">Adelaide's Current Air Quality</a></li>
 <li><a href="http://www.cfs.org.au">Fire Bans</a></li>
@@ -198,8 +198,8 @@ Site last updated:2:59 PM 12 Jun 2007</div>
 <li><a href="/site/page.cfm?u=43">Edit my link</a></li>
 </ul>
 </div>
-<div id="weather" title="Weather">Tuesday, 19th June 2007&nbsp;&nbsp; 5:48pm&nbsp;
-<a href="page.cfm?u=21">Wednesday Min 6 Max 14 Shower or two.</a>
+<div id="weather" title="Weather">Friday, 28th December 2007&nbsp;&nbsp; 10:52pm&nbsp;
+<a href="page.cfm?u=21">Saturday Min 22 Max 36 Dry. Sunny.</a>
 </div>
 </div>
 </div>
@@ -210,6 +210,11 @@ randImg();
 catch(ex) { 
 //do nothing
 }
+</script>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript">
+_uacct = "UA-1765918-2";
+urchinTracker();
 </script>
 
 
